fixed task component alignment

--- a/src/components/CreateTask/CreateTask.scss
+++ b/src/components/CreateTask/CreateTask.scss
@@ -1,7 +1,7 @@
-@import '../App/App.scss';
+@import "../App/App.scss";
 
-.App{
-    .create-task{
+.App {
+    .create-task {
         @include bp("phone") {
             width: 100vw;
             height: 90vh;
@@ -9,20 +9,52 @@
         @include bp("tablet") {
             width: 85vw;
             height: 100vh;
-
         }
-        .checkbox-container{
-            background-color: lightblue;
+        form {
             display: flex;
-            width: auto;
-
-            @include bp("phone"){
+            @include bp("phone") {
                 flex-direction: column;
             }
-            @include bp("tablet"){
+            @include bp("tablet") {
                 flex-direction: row;
             }
-            
+            .section-one {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                background-color: khaki;
+                @include bp("phone") {
+                    width: 100%;
+                }
+                @include bp("tablet") {
+                    width: 50%;
+                }
+
+                .checkbox-container {
+                    background-color: lightblue;
+                    display: flex;
+                    width: auto;
+
+                    @include bp("phone") {
+                        flex-direction: column;
+                    }
+                    @include bp("tablet") {
+                        flex-direction: row;
+                    }
+                }
+            }
+            .section-two {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                @include bp("phone") {
+                    width: 100%;
+                }
+                @include bp("tablet") {
+                    width: 50%;
+                }
+                background-color: brown;
+            }
         }
     }
 }
